welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:4: error: missing arguments for method isFacingTrail in class SlugSnail;
follow this method with `_' if you want to treat it as a partially applied function
   	if(isFacingTrail==true){
           ^SlugSnail:21: error: type mismatch;
 found   : Boolean
 required: java.awt.Color
if(getCouleurSol()==c:Color){
                  ^SlugSnail:21: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
if(getCouleurSol()==c:Color){
                     ^